# crispr

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: genome.rs  lib.rs
